# analise-numerica

./: .gitignore  .replit  Sistemas não Lineares.py  Zeros de Função de uma Variável.py  pyproject.toml  replit.nix
T1/: Interpolação.py  Zeros de Função de uma Variavel.dart  Zeros de Função de uma Variável.py  instalarPacotes.ps1  requirements.txt
T1/em-rust/: Cargo.toml
T1/em-rust/src/: main.rs
T2/: AjusteDeCurvas.jl  InterpolacaoPolinomial.jl  InterpolaçãoPolinomial.jl  instalarPacotes.jl  main.jl  pmain.py  t.py  tool.jl
T2/PauloRReis/prova3/Eq_Diferenciais/: 12-ralston_corrente.py
T2/bidinpithecus/trabalho2/integrais/: differentMethods_ex13.py  differentMethods_ex14.py  differentMethods_ex15.py  differentMethods_ex16.py  quad-gauss.py  romberg_erro.py  trapzTwoVariables.py
T2/modules/: AjusteDeCurvas.jl  Derivada.jl  Integral.jl
T3/: 1- CombinacaoLinear.py  2- CombinacaoLinear Romberg.py  CombinacaoLinear.py  T3.py  instalarPacotes.jl  main.jl  print.py  teste.py  teste2.py
T3/PauloRReis/prova3/Eq_Diferenciais/: 1-euler copy.py  11-esquiador.py  13-heun_corrente.py  14-runge_kutan4.py  2-eulerPM copy.py  3-eulerCP.py  4-eulerCP2.py  5-heun copy.py  6-ralston copy.py  7-runge-kutan copy.py  8-runge-kutan4 copy.py  9-heun_populacao copy.py
T3/PauloRReis/prova3/Otimizacao/: 1-trapz_otim_quad.py  4-fourier.py  (+2 more)
T3/kaua/: 20_eulerPopMID.py  22_esquiador.py
T3/modules/: Otimização.jl
T3/novak/: 01.py  02.py  03.py  04.py  05.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  q25Eq_dif.py  t.txt
T3/tools/: funções.jl  prints.jl
